loopdowhile.Poucet1.scala.code
avance()
while (estSurOrange() == false) {
  var nbrB:Int = 0
  for (i <- 1 to 5) {
    avance()
    if (estSurBiscuit) {
      nbrB = nbrB + 1
    }
  }  
  if (nbrB >= 3) {
    gauche();avance()
  }
  else {
    droite();avance()
  }
}